--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -38,6 +38,15 @@
     <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
+    <add key="SMTPSERVER" value="smtp.gmail.com" />
+    <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11" />
+    <add key="isSMTPAuthentication" value="true" />
+    <add key="FromEmail" value="service@miraihealth.com" />
+    <add key="SmtpServerUsername" value="noreply@vertisinfotech.com" />
+    <add key="SmtpServerPassword" value="Smtp!2#4" />
+    <add key="SMTPPort" value="587" />
+    <add key="isUseDefaultCredentials" value="false" />
+    <add key="isEnableSSl" value="true" />    
     <add key="PreserveLoginUrl" value="true"/>
     <add key="SuperAdminEmailId" value="super@admin.com"/>
     <add key="SuperAdminUserPassword" value="admin!2#4"/>
@@ -48,17 +57,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="ContactUsEmail" value="priyanka.p@vertisinfotech.com"/>
     <add key="ErrorEmailID" value="priyanka.p@vertisinfotech.com"/>
-    <add key="isSMTPAuthentication" value="true"/>
-    <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11"/>
-    <add key="SMTPSERVER" value="smtpout.secureserver.net"/>
-    <add key="SmtpServerUsername" value="service@miraihealth.com"/>
-    <add key="SmtpServerPassword" value="ServiceMiraiHealth0114"/>
-    <add key="SMTPPort" value="25"/>
-    <add key="isUseDefaultCredentials" value="false"/>
-    <add key="isEnableSSl" value="false"/>
     <add key="defaultUrl" value="http://localhost:53706/"/>
     <add key="NumberOfRecordsOnQuestionList" value="50"/>
-    <add key="SuperAdminUserPassword" value="admin!2#4"/>
+     <!--SMS Gateway Configuration-->
+    <add key="SMSGatewayURL" value="http://api.mVaayoo.com/mvaayooapi/MessageCompose" />
+    <add key="SMSGatewayUserName" value="nachiketk21@gmail.com" />
+    <add key="SMSGatewayPassword" value="nachiket" />
+    <add key="SMSGatewaySenderID" value="TEST SMS" />
     <add key="DocApproveNotificationTextMsg" value="Hello, your Mirai Health account has been validated. You are now ready to login and use our services. Mirai Health Team (service@miraihealth.com)"/>
     <add key="DocRejectNotificationTextMsg" value="Hello, your registration request has been rejected by the administrator. Mirai Health Team (service@miraihealth.com)"/>
     <add key="OnDocAssignQuestionSendEmail" value="A user has addressed the following question to you."/>
@@ -69,7 +74,6 @@
     <add key="OnPatientThankSendSMS" value="Hello, We are pleased to inform you that the user has thanked you for answering the question. Mirai Health Team (service@miraihealth.com)"/>
     <add key="OnRemoveQuestionFromListEmail" value="Hello, Your question was considered inappropriate and has been rejected by the administrator."/>
     <add key="OnRemoveQuestionFromListSMS" value="Hello, Your question was considered inappropriate and has been rejected by the administrator. Mirai Health Team (service@miraihealth.com)"/>
-    <add key="FromEmail" value="noreply@vertisinfotech.com"/>
     <add key="OnDoctorEndoresedSendSMS" value="Hello, We are pleased to inform you that the doctor has endorsed you for answering the question. AskMirai Services Team"/>
     <add key="MiraiHealthEmail" value="mailto:ask@miraihealth.com"/>
     <add key="websiteUrl" value="consult.miraihealth.com"/>
@@ -85,15 +89,9 @@
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx"/>
     <add key="website" value="consult.miraihealth.com"/>
   </appSettings>
-  <!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.6" />
-      </system.Web>
-  -->
   <system.web>
+    <sessionState timeout="60"></sessionState>
     <globalization culture="en-US" uiCulture="en"/>
     <customErrors mode="RemoteOnly">
       <error statusCode="404" redirect="~/Home/Static404"/>
