--- a/MiraiConsultMVC/Web.staging.config
+++ b/MiraiConsultMVC/Web.staging.config
@@ -6,15 +6,14 @@
   <connectionStrings xdt:Transform="Replace">
     <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai_UAT;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient" />
   </connectionStrings>
-
   <appSettings>
-    <add key="defaultUrl" value="http://10.10.10.7:9001/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="EmailVerificationLink" value="http://10.10.10.7:9001/User/Verifyemail" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="DocConnectApptUrl" value="http://10.10.10.7:9001/app/book/appointment.aspx?doc=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="defaultUrl" value="http://consult.s.miraihealth.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="EmailVerificationLink" value="http://consult.s.miraihealth.com/User/Verifyemail" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="DocConnectApptUrl" value="http://connect.s.miraihealth.com/app/book/appointment.aspx?doc=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="DoctorPhotosPath" value="C:\MiraiHealth\Consult_staging\Content\image\DoctorPhotos" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="AnswerPhotosPath" value="C:\MiraiHealth\Consult_staging\Content\image\answerImages" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="BookAppointmentLink" value="http://10.10.10.7:9001/app/book/appointment.aspx" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="website" value="http://10.10.10.7:9001" />
+    <add key="BookAppointmentLink" value="http://consult.s.miraihealth.com/app/book/appointment.aspx" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="website" value="http://consult.s.miraihealth.com" />
   </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
@@ -49,13 +48,13 @@
       <service behaviorConfiguration="ServiceBehaviour" name="Services.UserService">
         <host>
           <baseAddresses xdt:Transform="Replace">
-            <add baseAddress="http://10.10.10.7:9001/Services/UserService.svc" />
+            <add baseAddress="http://consult.s.miraihealth.com/Services/UserService.svc" />
           </baseAddresses>
         </host>
       </service>
     </services>
     <client xdt:Transform="Replace">
-      <endpoint address="http://10.10.10.7:9001/services/LoginService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILoginService1" contract="LoginServiceReference1.ILoginService" name="BasicHttpBinding_ILoginService1" />
+      <endpoint address="http://consult.s.miraihealth.com/services/LoginService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILoginService1" contract="LoginServiceReference1.ILoginService" name="BasicHttpBinding_ILoginService1" />
     </client>
   </system.serviceModel>
 </configuration>
