--- a/MiraiConsultMVC/Web.Release.config
+++ b/MiraiConsultMVC/Web.Release.config
@@ -1,12 +1,60 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
-<!-- For more information on using Web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
+<!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+  <log4net xdt:Transform="Replace">
+    <!-- Define some output appenders -->
+    <appender name="rollingFile" type="log4net.Appender.RollingFileAppender,log4net">
+      <param name="File" value="ErrorLog/log.txt" />
+      <param name="AppendToFile" value="true" />
+      <param name="RollingStyle" value="Date" />
+      <param name="DatePattern" value="yyyy.MM.dd" />
+      <param name="StaticLogFileName" value="true" />
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%date %logger [%thread] [%ndc] (%file:%line) %level- %message%newline" />
+      </layout>
+    </appender>
+    <!-- Setup the root category, add the appenders and set the default priority -->
+    <root>
+      <priority value="ALL" />
+      <appender-ref ref="rollingFile" />
+    </root>
+  </log4net>
+  <connectionStrings xdt:Transform="Replace">
+       <add name="AsquareMiraiConnectionString" connectionString="Data Source=WIN-P0G35TE89HS;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=asquaremirai;Password=asquaremirai" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
+  <appSettings>
+    <add key="ContactUsEmail" value="aakash@miraihealth.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="isUseDefaultCredentials" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SMTPSERVER" value="smtpout.secureserver.net" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SmtpServerUsername" value="service@miraihealth.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SmtpServerPassword" value="ServiceMiraiHealth0114" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SMTPPort" value="25" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="isUseDefaultCredentials" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="isEnableSSl" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="UNAUTHENTICATEDSMTPSERVER" value="10.1.1.178" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="isSMTPAuthentication" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>   
+    <!--SMS Gateway Configuration-->
+    <add key="SMSGatewayURL" value="http://api.mVaayoo.com/mvaayooapi/MessageCompose" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SMSGatewayUserName" value="aakashganju@gmail.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SMSGatewayPassword" value="AsquareVerti" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SMSGatewaySenderID" value="DMIRAI" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="defaultUrl" value="http://consult.miraihealth.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="FromEmail" value="service@miraihealth.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="DocConnectApptUrl" value="http://connect.miraihealth.com/app/book/appointment.aspx?doc=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="EmailVerificationLink" value="http://consult.miraihealth.com/User/Verifyemail" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="FacebookAppKey" value="833589266668189" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="website" value="consult.miraihealth.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="DoctorPhotosPath" value="C:\askmirai\Content\image\DoctorPhotos" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="AnswerPhotosPath" value="C:\askmirai\feed\answerPhotos" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="BookAppointmentLink" value="http://connect.miraihealth.com/app/book/appointment.aspx" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>    
+  </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an atrribute "name" that has a value of "MyDB".
+    finds an attribute "name" that has a value of "MyDB".
     
     <connectionStrings>
       <add name="MyDB" 
@@ -15,10 +63,18 @@
     </connectionStrings>
   -->
   <system.web>
+    <customErrors mode="On" xdt:Transform="Replace">
+      <error statusCode="404" redirect="~/Home/Static404" />
+    </customErrors>
+    <compilation targetFramework="4.5" xdt:Transform="Replace"/>
+    <httpRuntime targetFramework="4.5" executionTimeout="999999" maxRequestLength="2097151" xdt:Transform="Replace"/>
+    <authentication mode="Forms" xdt:Transform="Replace">
+      <forms loginUrl="/login" timeout="60" protection="All" slidingExpiration="true" />
+    </authentication>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
       In the example below, the "Replace" transform will replace the entire 
-      <customErrors> section of your Web.config file.
+      <customErrors> section of your web.config file.
       Note that because there is only one customErrors section under the 
       <system.web> node, there is no need to use the "xdt:Locator" attribute.
       
@@ -28,4 +84,39 @@
       </customErrors>
     -->
   </system.web>
+  <system.serviceModel>    
+    <client xdt:Transform="Replace">
+      <endpoint address="http://consult.miraihealth.com/services/LoginService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILoginService1" contract="LoginServiceReference1.ILoginService" name="BasicHttpBinding_ILoginService1" />
+    </client>
+  </system.serviceModel>
+  <system.webServer xdt:Transform="Replace">
+    <validation validateIntegratedModeConfiguration="false" />
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+    <directoryBrowse enabled="true" />
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST" />
+      </customHeaders>
+    </httpProtocol>
+    <httpErrors>
+      <remove statusCode="404" subStatusCode="-1" />
+      <remove statusCode="403" subStatusCode="-1" />
+      <error statusCode="403" prefixLanguageFilePath="" path="http://consult.miraihealth.com" responseMode="Redirect" />
+      <error statusCode="404" prefixLanguageFilePath="" path="http://consult.miraihealth.com" responseMode="Redirect" />
+    </httpErrors>
+    <defaultDocument enabled="true" />
+    <security>
+      <requestFiltering>
+        <requestLimits maxUrl="20000000" maxQueryString="20000000" />
+      </requestFiltering>
+    </security>
+  </system.webServer>
 </configuration>
