Added facebook key for staging.

--- a/MiraiConsultMVC/Web.staging.config
+++ b/MiraiConsultMVC/Web.staging.config
@@ -14,6 +14,7 @@
     <add key="AnswerPhotosPath" value="C:\MiraiHealth\Consult_staging\Content\image\answerImages" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="BookAppointmentLink" value="http://consult.s.miraihealth.com/app/book/appointment.aspx" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="website" value="http://consult.s.miraihealth.com" />
+    <add key="FacebookAppKey" value="1504592109758014" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
