Added cca2tbl_chat_dialog migration.

--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -279,6 +279,14 @@
     <Compile Include="Migrations\201506230926239_AllowNullsInPrepayColumns.Designer.cs">
       <DependentUpon>201506230926239_AllowNullsInPrepayColumns.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201506240907235_AddCCA2tbl_chat_dialogs.cs" />
+    <Compile Include="Migrations\201506240907235_AddCCA2tbl_chat_dialogs.Designer.cs">
+      <DependentUpon>201506240907235_AddCCA2tbl_chat_dialogs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201506240910448_AdddialogFee2tbl_chat_dialogs.cs" />
+    <Compile Include="Migrations\201506240910448_AdddialogFee2tbl_chat_dialogs.Designer.cs">
+      <DependentUpon>201506240910448_AdddialogFee2tbl_chat_dialogs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\CustomDateModelBinder.cs" />
@@ -700,6 +708,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201506230926239_AllowNullsInPrepayColumns.resx">
       <DependentUpon>201506230926239_AllowNullsInPrepayColumns.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201506240907235_AddCCA2tbl_chat_dialogs.resx">
+      <DependentUpon>201506240907235_AddCCA2tbl_chat_dialogs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201506240910448_AdddialogFee2tbl_chat_dialogs.resx">
+      <DependentUpon>201506240910448_AdddialogFee2tbl_chat_dialogs.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
