--- a/MiraiConsultMVC/packages.config
+++ b/MiraiConsultMVC/packages.config
@@ -12,7 +12,7 @@
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net46" userInstalled="true" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net46" userInstalled="true" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net46" userInstalled="true" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net46" userInstalled="true" />
@@ -21,6 +21,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.5.1" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.2.3" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.2.3" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.AspNet.WebPages.OAuth" version="3.2.3" targetFramework="net46" userInstalled="true" />
