Added prepay url in web.config.

--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -36,7 +36,7 @@
   </log4net>
   <connectionStrings>
     <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai_test;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient" />
-  <add name="EFModelContext" connectionString="data source=10.10.10.41;initial catalog=AsquareMirai_test;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="EFModelContext" connectionString="data source=10.10.10.41;initial catalog=AsquareMirai_test;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="SMTPSERVER" value="smtp.gmail.com" />
     <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11" />
@@ -88,7 +88,8 @@
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages" />
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx" />
     <add key="website" value="consult.miraihealth.com" />
-    <add key="prepaidApptReminderNotification" value="Your appointment with Dr. @doctor on @date at @time has been blocked. Your doctor requests a pre-pay to confirm the appointment. Click on this link to pay and confirm the appointment: http://mrai.co/@token. Please pay by @prepayby to avoid cancellation. Mirai Health (service@miraihealth.com)"/>
+    <add key="prepaidApptReminderNotification" value="Your appointment with Dr. @doctor on @date at @time has been blocked. Your doctor requests a pre-pay to confirm the appointment. Click on this link to pay and confirm the appointment: @url. Please pay by @prepayby to avoid cancellation. Mirai Health (service@miraihealth.com)"/>
+    <add key="prePayUrl" value="http://s.mrai.co/"/>
   </appSettings>
 
   <system.web>
