--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -89,7 +89,7 @@
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx" />
     <add key="website" value="consult.miraihealth.com" />
     <add key="prepaidApptReminderNotification" value="Your appointment with Dr. @doctor on @date at @time has been blocked. Your doctor requests a pre-pay to confirm the appointment. Click on this link to pay and confirm the appointment: @url. Please pay by @prepayby to avoid cancellation. Mirai Health (service@miraihealth.com)"/>
-    <add key="prePayUrl" value="http://s.mrai.co/"/>
+    <add key="prePayUrl" value="http://s.mrai.co/a/"/>
   </appSettings>
 
   <system.web>
