Allow null into notification_status column.

--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -300,6 +300,10 @@
     <Compile Include="Migrations\201507010822398_notification_status2Appointments.Designer.cs">
       <DependentUpon>201507010822398_notification_status2Appointments.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201507010913404_AllowNullIn_notification_statuscolumns.cs" />
+    <Compile Include="Migrations\201507010913404_AllowNullIn_notification_statuscolumns.Designer.cs">
+      <DependentUpon>201507010913404_AllowNullIn_notification_statuscolumns.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\CustomDateModelBinder.cs" />
@@ -739,6 +743,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201507010822398_notification_status2Appointments.resx">
       <DependentUpon>201507010822398_notification_status2Appointments.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507010913404_AllowNullIn_notification_statuscolumns.resx">
+      <DependentUpon>201507010913404_AllowNullIn_notification_statuscolumns.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
