Fixed payment for staging.

--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -355,6 +355,7 @@
     </Compile>
     <Compile Include="Utilities\askmiraiEnum.cs" />
     <Compile Include="Utilities\BasePage.cs" />
+    <Compile Include="Utilities\CCAvenueHelper.cs" />
     <Compile Include="Utilities\CustomActionAttribute.cs" />
     <Compile Include="Utilities\EmailTemplates.cs" />
     <Compile Include="Utilities\Mail.cs" />
