--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -35,8 +35,8 @@
     </root>
   </log4net>
   <connectionStrings>
-    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai_test;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient" />
-    <add name="EFModelContext" connectionString="data source=10.10.10.41;initial catalog=AsquareMirai_test;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai_UAT;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient" />
+    <add name="EFModelContext" connectionString="data source=10.10.10.41;initial catalog=AsquareMirai_UAT;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="SMTPSERVER" value="smtp.gmail.com" />
     <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11" />
@@ -92,10 +92,10 @@
     <add key="PrepaidApptCancellationNotification" value="Hello, your appointment with Dr. @doctor on @date at @time has been cancelled as payment was not received in time. Please call (not SMS) on @number to book another appointment. Mirai Health (service@miraihealth.com)"/>
     <add key="prePayUrl" value="http://s.mrai.co/a/"/>
     <add key="phoneNumber" value="07666252444"/>
-    <add key="ccavenueUrl" value="https://secure.ccavenue.com/transaction/transaction.do?command=initiateTransaction" />
+    <add key="CcavenueUrl" value="https://secure.ccavenue.com/transaction/transaction.do?command=initiateTransaction" />
     <add key="MerchantId" value="58314" />
-    <add key="WorkingKey" value="9D58E2E135E7CE2A332BF7BADAD1150A" />
-    <add key="AccessCode" value="AVAN00CC15AE33NAEA" />
+    <add key="WorkingKey" value="114B7C4CAC5C321921DC47725184835A" />
+    <add key="AccessCode" value="AVSC05CD01BO26CSOB" />
   </appSettings>
 
   <system.web>
