--- a/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
+++ b/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
@@ -15,7 +15,7 @@
       <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <log4net>
     <!-- Define some output appenders -->
     <appender name="rollingFile" type="log4net.Appender.RollingFileAppender,log4net">
@@ -35,8 +35,8 @@
     </root>
   </log4net>
   <connectionStrings>
-    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai_test;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient" />
-  <add name="EFModels" connectionString="data source=10.10.10.41;initial catalog=AsquareMirai_test;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai_UAT;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient" />
+    <add name="EFModelContext" connectionString="data source=10.10.10.41;initial catalog=AsquareMirai_UAT;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="SMTPSERVER" value="smtp.gmail.com" />
     <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11" />
@@ -50,7 +50,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="SuperAdminEmailId" value="super@admin.com" />
     <add key="SuperAdminUserPassword" value="admin!2#4" />
-    <add key="webpages:Version" value="2.0.0.0" />
+    <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
@@ -88,6 +88,14 @@
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages" />
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx" />
     <add key="website" value="consult.miraihealth.com" />
+    <add key="prepaidApptReminderNotification" value="Your appointment with Dr. @doctor on @date at @time has been blocked. Your doctor requests a pre-pay to confirm the appointment. Click on this link to pay and confirm the appointment: @url. Please pay by @prepayby to avoid cancellation. Mirai Health (service@miraihealth.com)"/>
+    <add key="PrepaidApptCancellationNotification" value="Hello, your appointment with Dr. @doctor on @date at @time has been cancelled as payment was not received in time. Please call (not SMS) on @number to book another appointment. Mirai Health (service@miraihealth.com)"/>
+    <add key="prePayUrl" value="http://s.mrai.co/a/"/>
+    <add key="phoneNumber" value="07666252444"/>
+    <add key="CcavenueUrl" value="https://secure.ccavenue.com/transaction/transaction.do?command=initiateTransaction" />
+    <add key="MerchantId" value="58314" />
+    <add key="WorkingKey" value="114B7C4CAC5C321921DC47725184835A" />
+    <add key="AccessCode" value="AVSC05CD01BO26CSOB" />
   </appSettings>
 
   <system.web>
@@ -96,7 +104,15 @@
     <customErrors mode="RemoteOnly">
       <error statusCode="404" redirect="~/Home/Static404" />
     </customErrors>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
       <forms loginUrl="/login" timeout="2880" />
