Saved response data of ccavenue into table.

--- a/MiraiConsultMVC/Web.staging.config
+++ b/MiraiConsultMVC/Web.staging.config
@@ -16,6 +16,9 @@
     <add key="BookAppointmentLink" value="http://consult.s.miraihealth.com/app/book/appointment.aspx" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="website" value="http://consult.s.miraihealth.com" />
     <add key="FacebookAppKey" value="1504592109758014" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="CcavenueUrl" value="http://test.ccavenue.com/transaction/transaction.do?command=initiateTransaction" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="WorkingKey" value="00D8F48070D495DC6F37DE4ACB0E91E7" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="AccessCode" value="AVOH00CG20AE95HOEA" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
