Fixed redirect URLs.

--- a/MiraiConsultMVC/Web.Release.config
+++ b/MiraiConsultMVC/Web.Release.config
@@ -49,7 +49,12 @@
     <add key="website" value="consult.miraihealth.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="DoctorPhotosPath" value="C:\askmirai\Content\image\DoctorPhotos" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="AnswerPhotosPath" value="C:\askmirai\feed\answerPhotos" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="BookAppointmentLink" value="http://connect.miraihealth.com/app/book/appointment.aspx" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>    
+    <add key="BookAppointmentLink" value="http://connect.miraihealth.com/app/book/appointment.aspx" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="CcavenueUrl" value="http://test.ccavenue.com/transaction/transaction.do?command=initiateTransaction"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="MerchantId" value="58314" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="WorkingKey" value="00D8F48070D495DC6F37DE4ACB0E91E7" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="AccessCode" value="AVOH00CG20AE95HOEA"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+
   </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
