--- a/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
+++ b/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
@@ -34,9 +34,10 @@
       <appender-ref ref="rollingFile" />
     </root>
   </log4net>
-  <connectionStrings>
+  <connectionStrings>  
     <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai_UAT;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient" />
-    <add name="EFModelContext" connectionString="data source=10.10.10.41;initial catalog=AsquareMirai_UAT;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="EFModelContext" connectionString="data source=10.10.10.41;initial catalog=AsquareMirai_UAT;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="SMTPSERVER" value="smtp.gmail.com" />
     <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11" />
@@ -76,7 +77,8 @@
     <add key="OnRemoveQuestionFromListSMS" value="Hello, Your question was considered inappropriate and has been rejected by the administrator. Mirai Health Team (service@miraihealth.com)" />
     <add key="OnDoctorEndoresedSendSMS" value="Hello, We are pleased to inform you that the doctor has endorsed you for answering the question. AskMirai Services Team" />
     <add key="MiraiHealthEmail" value="mailto:ask@miraihealth.com" />
-    <add key="websiteUrl" value="consult.miraihealth.com" />
+    <add key="websiteUrl" value="consult.s.miraihealth.com" />
+    <add key="websiteShortUrl" value="mrai.co" />
     <add key="shareMessage" value="has invited you to Mirai Health" />
     <add key="DocConnectApptUrl" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx?doc=" />
     <add key="EmailVerificationLink" value="http://demo.vertisinfotech.com:7171/User/Verifyemail" />
@@ -96,6 +98,7 @@
     <add key="MerchantId" value="58314" />
     <add key="WorkingKey" value="114B7C4CAC5C321921DC47725184835A" />
     <add key="AccessCode" value="AVSC05CD01BO26CSOB" />
+    <add key="redirectSiteUrl" value="http://consult.s.miraihealth.com"/>
   </appSettings>
 
   <system.web>
