Added short URLs to web config.

--- a/MiraiConsultMVC/Web.Release.config
+++ b/MiraiConsultMVC/Web.Release.config
@@ -54,7 +54,9 @@
     <add key="MerchantId" value="58314" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="WorkingKey" value="00D8F48070D495DC6F37DE4ACB0E91E7" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
     <add key="AccessCode" value="AVOH00CG20AE95HOEA"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-
+    <add key="websiteUrl" value="consult.miraihealth.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="websiteShortUrl" value="mrai.co" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="prePayUrl" value="http://mrai.co/a/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
