--- a/MiraiConsultMVC/Web.staging.config
+++ b/MiraiConsultMVC/Web.staging.config
@@ -19,6 +19,9 @@
     <add key="CcavenueUrl" value="http://Secure.ccavenue.com/transaction/transaction.do?command=initiateTransaction" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="WorkingKey" value="7DED0DE9D83F2C1B5211BE5DD0527EE1" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="AccessCode" value="AVPE05CG50AD02EPDA" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SMSGatewayUserName" value="aakashganju@gmail.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SMSGatewayPassword" value="AsquareVerti" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SMSGatewaySenderID" value="DMIRAI" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
