--- a/MiraiConsultMVC/Web.Release.config
+++ b/MiraiConsultMVC/Web.Release.config
@@ -22,7 +22,8 @@
     </root>
   </log4net>
   <connectionStrings xdt:Transform="Replace">
-       <add name="AsquareMiraiConnectionString" connectionString="Data Source=WIN-P0G35TE89HS;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=asquaremirai;Password=asquaremirai" providerName="System.Data.SqlClient" />
+    <add name="AsquareMiraiConnectionString" connectionString="Data Source=WIN-P0G35TE89HS;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=asquaremirai;Password=asquaremirai" providerName="System.Data.SqlClient" />
+    <add name="EFModelContext" connectionString="data source=WIN-P0G35TE89HS;initial catalog=AsquareMirai;persist security info=True;user id=asquaremirai;password=asquaremirai;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <appSettings>
@@ -50,13 +51,14 @@
     <add key="DoctorPhotosPath" value="C:\askmirai\Content\image\DoctorPhotos" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="AnswerPhotosPath" value="C:\askmirai\feed\answerPhotos" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="BookAppointmentLink" value="http://connect.miraihealth.com/app/book/appointment.aspx" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="CcavenueUrl" value="http://test.ccavenue.com/transaction/transaction.do?command=initiateTransaction"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="CcavenueUrl" value="http://secure.ccavenue.com/transaction/transaction.do?command=initiateTransaction"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="MerchantId" value="58314" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="WorkingKey" value="00D8F48070D495DC6F37DE4ACB0E91E7" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
-    <add key="AccessCode" value="AVOH00CG20AE95HOEA"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="WorkingKey" value="595EC59C24EBB53067101B38A7F4E827" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="AccessCode" value="AVZF05CG50AD10FZDA"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="websiteUrl" value="consult.miraihealth.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="websiteShortUrl" value="mrai.co" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="prePayUrl" value="http://mrai.co/a/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="redirectSiteUrl" value="http://consult.miraihealth.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
