--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -90,7 +90,7 @@
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages" />
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx" />
     <add key="website" value="consult.miraihealth.com" />
-    <add key="prepaidApptReminderNotification" value="Your appointment with Dr. @doctor on @date at @time has been blocked. Your doctor requests a pre-pay to confirm the appointment. Click on this link to pay and confirm the appointment: @url. Please pay by @prepayby to avoid cancellation. Mirai Health (service@miraihealth.com)"/>
+    <add key="prepaidApptReminderNotification" value="Hello, Your appointment with Dr. @doctor on @date at @time has been blocked. Your doctor requests a prepayment to confirm the appointment. Click on this link to pay and confirm the appointment: @url . Please pay by @prepayby to avoid cancellation. Mirai Health (service@miraihealth.com)"/>
     <add key="PrepaidApptCancellationNotification" value="Hello, Your appointment with Dr. @doctor on @date at @time has been cancelled as the payment was not received in time. Please call (not SMS) on @number to book another appointment. Mirai Health (service@miraihealth.com)"/>
     <add key="SuccessfulPaymentNotificationToDoctor" value="Hello Dr. @doctor, the payment for your appointment with patient @patientname has been received. The appointment has been scheduled for @date at @time at @clinicName"/>
     <add key="prePayUrl" value="http://ss.mrai.co:9001/a/"/>
