--- a/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
+++ b/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
@@ -62,9 +62,9 @@
     <add key="NumberOfRecordsOnQuestionList" value="50" />
      <!--SMS Gateway Configuration-->
     <add key="SMSGatewayURL" value="http://api.mVaayoo.com/mvaayooapi/MessageCompose" />
-    <add key="SMSGatewayUserName" value="nachiketk21@gmail.com" />
-    <add key="SMSGatewayPassword" value="nachiket" />
-    <add key="SMSGatewaySenderID" value="TEST SMS" />
+    <add key="SMSGatewayUserName" value="aaaakashganju@gmail.com" />
+    <add key="SMSGatewayPassword" value="aaAsquareVerti" />
+    <add key="SMSGatewaySenderID" value="aaDMIRAI" />
     <add key="DocApproveNotificationTextMsg" value="Hello, your Mirai Health account has been validated. You are now ready to login and use our services. Mirai Health Team (service@miraihealth.com)" />
     <add key="DocRejectNotificationTextMsg" value="Hello, your registration request has been rejected by the administrator. Mirai Health Team (service@miraihealth.com)" />
     <add key="OnDocAssignQuestionSendEmail" value="A user has addressed the following question to you." />
@@ -78,7 +78,7 @@
     <add key="OnDoctorEndoresedSendSMS" value="Hello, We are pleased to inform you that the doctor has endorsed you for answering the question. AskMirai Services Team" />
     <add key="MiraiHealthEmail" value="mailto:ask@miraihealth.com" />
     <add key="websiteUrl" value="consult.s.miraihealth.com" />
-    <add key="websiteShortUrl" value="mrai.co" />
+    <add key="websiteShortUrl" value="ss.mrai.co:9001" />
     <add key="shareMessage" value="has invited you to Mirai Health" />
     <add key="DocConnectApptUrl" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx?doc=" />
     <add key="EmailVerificationLink" value="http://demo.vertisinfotech.com:7171/User/Verifyemail" />
@@ -90,9 +90,10 @@
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages" />
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx" />
     <add key="website" value="consult.miraihealth.com" />
-    <add key="prepaidApptReminderNotification" value="Your appointment with Dr. @doctor on @date at @time has been blocked. Your doctor requests a pre-pay to confirm the appointment. Click on this link to pay and confirm the appointment: @url. Please pay by @prepayby to avoid cancellation. Mirai Health (service@miraihealth.com)"/>
-    <add key="PrepaidApptCancellationNotification" value="Hello, your appointment with Dr. @doctor on @date at @time has been cancelled as payment was not received in time. Please call (not SMS) on @number to book another appointment. Mirai Health (service@miraihealth.com)"/>
-    <add key="prePayUrl" value="http://s.mrai.co/a/"/>
+    <add key="prepaidApptReminderNotification" value="Hello, Your appointment with Dr. @doctor on @date at @time has been blocked. Your doctor requests a prepayment to confirm the appointment. Click on this link to pay and confirm the appointment: @url . Please pay by @prepayby to avoid cancellation. Mirai Health (service@miraihealth.com)"/>
+    <add key="PrepaidApptCancellationNotification" value="Hello, Your appointment with Dr. @doctor on @date at @time has been cancelled as the payment was not received in time. Please call (not SMS) on @number to book another appointment. Mirai Health (service@miraihealth.com)"/>
+    <add key="SuccessfulPaymentNotificationToDoctor" value="Hello Dr. @doctor, the payment for your appointment with patient @patientname has been received. The appointment has been scheduled for @date at @time at @clinicName"/>
+    <add key="prePayUrl" value="http://ss.mrai.co:9001/a/"/>
     <add key="phoneNumber" value="07666252444"/>
     <add key="CcavenueUrl" value="https://secure.ccavenue.com/transaction/transaction.do?command=initiateTransaction" />
     <add key="MerchantId" value="58314" />
