Added elmah for logging on production. Fixed other detail of doctor profile is not getting updated. Fixed telephone number is not getting updated in clinic address. Added url column in  doctorlocations table. Added website in doctorpublic proofile.

--- a/MiraiConsultMVC/Web.Release.config
+++ b/MiraiConsultMVC/Web.Release.config
@@ -24,6 +24,7 @@
   <connectionStrings xdt:Transform="Replace">
     <add name="AsquareMiraiConnectionString" connectionString="Data Source=WIN-P0G35TE89HS;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=asquaremirai;Password=asquaremirai" providerName="System.Data.SqlClient" />
     <add name="EFModelContext" connectionString="data source=WIN-P0G35TE89HS;initial catalog=AsquareMirai;persist security info=True;user id=asquaremirai;password=asquaremirai;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="elmah" connectionString="Data Source=WIN-P0G35TE89HS;Initial Catalog=Asquaremirai_Errorlog;User Id=Elmah;Password=Microsoft!23;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <appSettings>
@@ -128,4 +129,8 @@
       </requestFiltering>
     </security>
   </system.webServer>
+  <elmah xdt:Transform="Replace">
+    <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="elmah" applicationName="AskMirai" />
+    <errorMail from="service@miraihealth.com" to="priyanka.p@vertisinfotech.com" async="true" smtpServer="smtpout.secureserver.net" smtpPort="25" userName="service@miraihealth.com" password="ServiceMiraiHealth0114" useSsl="false" />
+  </elmah>
 </configuration>
