--- a/MiraiConsultMVC/Web.staging.config
+++ b/MiraiConsultMVC/Web.staging.config
@@ -6,6 +6,7 @@
   <connectionStrings xdt:Transform="Replace">
     <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai_UAT;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient" />
     <add name="EFModelContext" connectionString="data source=10.10.10.41;initial catalog=AsquareMirai_UAT;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="elmah" connectionString="Data Source=10.10.10.41;Initial Catalog=Asquaremirai_Errorlog;User Id=Elmah;Password=vertis!2#;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="defaultUrl" value="http://consult.s.miraihealth.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
