--- a/MiraiConsultMVC/packages.config
+++ b/MiraiConsultMVC/packages.config
@@ -10,6 +10,8 @@
   <package id="DotNetOpenAuth.OAuth.Core" version="4.3.4.13329" targetFramework="net46" userInstalled="true" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.3.4.13329" targetFramework="net46" userInstalled="true" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.3.4.13329" targetFramework="net46" userInstalled="true" />
+  <package id="elmah.corelibrary" version="1.2" targetFramework="net45" />
+  <package id="Elmah.Mvc" version="2.1.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" userInstalled="true" />
   <package id="jQuery" version="2.1.4" targetFramework="net46" userInstalled="true" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net46" userInstalled="true" />
